# AA

./: AA.cpp  AA.h  CMakeLists.txt  CSV.h  Protein.cpp  Protein.h  amino_acid_properties.cpp  amino_acid_properties.h  amino_acids.cpp  amino_acids.h  gcd.cpp  gcd.h  lcs.cpp  lcs.h  main.cpp  primes.cpp  primes.h  tests.h
Files/: AA shit  database_itamar.txt  database_itamar_original.txt  input args  input_protein.txt  input_protein_with_disulfide_bouns.txt
